Added routing to details page and put stuff in details.html.  Deleted unneccesary *.css and *.js** files.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "TemplateApp",
+  "name": "RiverCityApp",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#master",
