--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,11 @@
     "lodash": "~3.10.1"
   },
   "dependencies": {
-    "ngCordova": "~0.1.12-alpha",
+    "angular-google-maps": "~2.2.1",
+    "angular-simple-logger": "~0.0.1",
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "ngCordova": "~0.1.12-alpha"
   }
 }
