--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "cordova-plugin-file-transfer",
     "cordova-plugin-file",
     "cordova-plugin-splashscreen",
-    "cordova-plugin-whitelist@1.0.0"
+    "cordova-plugin-whitelist@1.0.0",
+    "cordova-plugin-transport-security"
   ],
   "cordovaPlatforms": [
     "android",
